--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -3,19 +3,23 @@
 }
 
 html {
-	font-family: 'HelveticaNeue', Arial, sans-serif;
+	font-family: $font-stack-Helvetica;
 	font-weight: 300;
 }
 
-.header, .main, .footer {
-	max-width: 1280px;
+.header,
+.main,
+.footer {
+	max-width: $max-width;
 	margin: 0 auto;
 }
 
 .main {
-	padding: 20px 120px;
-	position: relative;
 	@include respond-to(tablets) {
 		padding: 27px 20px;
 	}
+
+	position: relative;
+
+	padding: 20px 120px;
 }
