--- a/scss/_m-general.scss
+++ b/scss/_m-general.scss
@@ -3,12 +3,14 @@
 }
 
 html {
-	font-family: 'HelveticaNeue', Arial, sans-serif;
+	max-width: $max-width-mob;
+
+	font-family: $font-stack-Helvetica;
 	font-weight: 300;
-	max-width: 620px;
 }
 
 .main {
-	padding: 20px;
 	position: relative;
+
+	padding: 20px;
 }
