--- a/scss/_m-popup.scss
+++ b/scss/_m-popup.scss
@@ -1,63 +1,73 @@
 .location-popup {
+	position: fixed;
+	top: 0;
+	z-index: 2000;
+
+	overflow: hidden;
 	min-width: 100%;
 	min-height: 100%;
+
 	background-color: rgba(0, 0, 0, 0.5);
-	overflow: hidden;
-	position: fixed;
-	top: 0px;
-	z-index: 2000;
 	&__content {
-		margin: 20px auto;
 		width: 260px;
 		height: 675px;
+		margin: 20px auto;
 	}
 }
 
 .popup {
 	font-family: 'HelveticaNeue', Arial, sans-serif;
 	&__header {
-		background-color: #dbdbdb;
-		padding: 10px 100px 9px 8px;
 		position: relative;
-		font-size: 14px;
+
+		padding: 10px 100px 9px 8px;
+
+		background-color: $popup-header-background-color;
+
+		font-size: $popup-header-font-size-mob;
 	}
 	&__title {
+		font-size: $popup-header-font-size-mob;
 		text-transform: uppercase;
-		font-size: 14px;
 	}
 	&-close {
-		text-decoration: none;
 		position: absolute;
 		top: 50%;
 		right: 8px;
-		color: #727272;
+
+		color: $close-icon-color;
+		text-decoration: none;
+
 		transform: translateY(-50%);
 		&::before {
-			font-size: 20px;
+			font-size: $popup-close-size;
 		}
 	}
 	&__main {
-		background-color: #FFF;
+		background-color: $popup-main-background-color;
 		&-title {
-			padding: 20px;
-			text-align: center;
 			display: block;
-			font-size: 14px;
+			padding: 20px;
+
+			font-size: $popup-title-font-size;
+			text-align: center;
 			b {
 				margin: 5px;
 			}
 		}
 		&-locations {
 			display: flex;
-			justify-content: space-between;
 			flex-direction: column;
+			justify-content: space-between;
 			&-item {
+				position: relative;
+
+				margin-bottom: 25px;
 				padding-top: 25px;
 				padding-bottom: 23px;
-				margin-bottom: 25px;
-				position: relative;
-				font-size: 13px;
-				border-top: 1px solid #dedede;
+				border-top: 1px solid $border-color;
+
+				font-size: $popup-content-font-size;
 			}
 		}
 	}
@@ -66,27 +76,31 @@
 .location {
 	&-title {
 		display: block;
-		text-align: center;
 		margin-bottom: 10px;
-		font-size: 14px;
+
+		font-size: $popup-title-font-size;
+		text-align: center;
 	}
 	&-text {
 		display: block;
+
 		text-align: center;
 		a {
+			color: $primary-text-color;
 			text-decoration: none;
-			color: #000;
 		}
 	}
 	&-link {
-		color: #000;
-		display: block;
-		text-align: center;
 		position: absolute;
 		bottom: 0;
 		left: 50%;
-		transform: translateX(-50%);
+
+		display: block;
+
+		color: $primary-text-color;
 		white-space: nowrap;
+		text-align: center;
+
+		transform: translateX(-50%);
 	}
 }
-
