--- a/scss/_m-product.scss
+++ b/scss/_m-product.scss
@@ -1,35 +1,35 @@
 .product {
 	margin-top: 30px;
 	&__title {
-		font-size: 18px;
-		color: #000;
 		margin: 0;
+
+		color: $primary-text-color;
 		font-weight: 400;
+		font-size: $product-title-font-size-mob;
 	}
 	&__subtitle {
-		font-size: 14px;
-		font-weight: 300;
-		color: #000;
+		display: block;
 		margin: 0;
 		padding-right: 140px;
-		display: block;
+
+		color: $primary-text-color;
+		font-weight: 300;
+		font-size: $product-subtitle-font-size-mob;
 	}
 }
 
 .photo {
-	margin-bottom: 20px;
 	display: flex;
-	justify-content: flex-start;
 	flex-direction: column;
+	justify-content: flex-start;
+	margin-bottom: 20px;
 	&__view {
 		order: 1;
 		width: 260px;
 		height: 347px;
-		//background: url('../images/photo-view-mob-min.jpg') no-repeat;
 		margin-bottom: 24px;
 		&-img {
-			width: 100%;
-			height: 100%;
+			@include image-fit;
 		}
 	}
 	&__nav {
@@ -37,13 +37,14 @@
 		justify-content: center;
 		order: 2;
 		&-item {
+			display: block;
 			width: 7px;
 			height: 7px;
+
 			border-radius: 100%;
-			background-color: #dedede;
-			display: block;
+			background-color: $slider-dots-inactive-color;
 			&.active {
-				background-color: #f68235;
+				background-color: $slider-dots-active-color;
 			}
 			&:not(:last-child) {
 				margin-right: 10px;
@@ -53,55 +54,63 @@
 }
 
 .price {
-	margin-top: 23px;
-	background-color: #ededed;
 	display: flex;
 	justify-content: space-between;
+	margin-top: 23px;
 	padding: 10px 20px;
+
+	background-color: $price-background-color-mob;
 	&__number {
 		&.price--old {
-			text-decoration: line-through;
-			color: #999;
 			display: block;
-			font-size: 14px;
+
+			color: $old-price-color;
+			font-size: $product-price-font-size-mob;
+			text-decoration: line-through;
 		}
 		&.price--new {
-			color: #f68235;
 			display: block;
-			font-size: 24px;
+
+			color: $new-price-color;
+			font-size: $product-new-price-font-size-mob;
 		}
 	}
 	&__sale {
-		width: 45px;
-		height: 45px;
-		border-radius: 100%;
-		color: #fff;
-		background-color: #828282;
-		font-size: 14px;
-		text-align: center;
+		width: $sale-width-mob;
+		height: $sale-height-mob;
 		padding: 14px 5px;
+
+		border-radius: 100%;
+		background-color: $sale-background-color;
+
+		color: $sale-color;
+		font-size: $sale-font-size-mob;
+		text-align: center;
 	}
 }
 
 .color {
 	padding: 23px 0;
-	font-size: 12px;
+
+	font-size: $pick-color-font-size-mob;
 	&__text {
-		font-weight: 600;
 		display: inline-block;
-		margin-bottom: 10px;
 		margin-right: 5px;
+		margin-bottom: 10px;
+
+		font-weight: 600;
 	}
 	&__pic {
-		width: 35px;
-		height: 35px;
 		display: inline-block;
+		width: $pick-color-width;
+		height: $pick-color-height;
 		margin-right: 10px;
 		&.active {
-			border: 2px solid #f68235;
+			border: 2px solid $active-item-color;
 		}
 		&:hover {
-			border: 2px solid #fff;
+			border: 2px solid $white;
+
 			cursor: pointer;
 		}
 	}
@@ -123,238 +132,281 @@
 }
 
 .size {
-	border-top: 1px solid #dedede;
 	padding: 23px 0;
-	font-size: 12px;
+	border-top: 1px solid $border-color;
+
+	font-size: $pick-size-font-size-mob;
 	&__info {
 		display: flex;
 		justify-content: space-between;
 	}
 	&__text {
-		font-weight: 600;
 		margin-bottom: 10px;
+
+		font-weight: 600;
 	}
 	&__table {
-		color: #999;
+		color: $link-color;
 		&:hover {
-			color: #000;
+			color: $primary-text-color;
 		}
 	}
 	&__pic {
-		width: 35px;
-		height: 35px;
 		display: inline-block;
+		width: $pick-size-width;
+		height: $pick-size-height;
 		margin-right: 10px;
-		border: 1px solid #ccc;
-		color: #000;
-		text-align: center;
 		padding: 8px;
-		@include respond-to(tablets) {
-			padding: 9px;
-		}
+		border: 1px solid $pick-size-border-color;
+
+		color: $primary-text-color;
+		text-align: center;
 		&.active {
-			border: 2px solid #f68235;
+			border: 2px solid $active-item-color;
 		}
 		&.disabled {
-			color: #6d6d6d;
-			background-color: #dedede;
+			background-color: $disabled-background-color;
+
+			color: $disabled-text-color;
+
 			pointer-events: none;
 		}
 		&:hover {
-			border: 2px solid #000;
+			border: 2px solid $black;
+
 			cursor: pointer;
 		}
 	}
 	&__fit {
-		margin-top: 15px;
-		color: #999;
 		display: inline-block;
+		margin-top: 15px;
+
+		color: $link-color;
 		&:hover {
-			color: #000;
+			color: $primary-text-color;
 		}
 		span {
-			font-family: 'OpenSans', sans-serif;
-			font-size: 12px;
+			font-family: $font-stack-OpenSans;
+			font-size: $product-size-fit-font-size-mob;
 		}
 		&.icon--hanger {
 			position: relative;
 			&::before {
 				position: absolute;
-				font-size: 10px;
-				background-color: #487eba;
+				top: 50%;
+				left: 100%;
+
 				width: 12px;
 				height: 12px;
-				border-radius: 100%;
-				color: #fff;
-				left: 100%;
 				margin-left: 10px;
-				top: 50%;
-				transform: translateY(-50%);
 				padding: 3px;
+
+				border-radius: 100%;
+				background-color: $hanger-background-color;
+
+				color: $hanger-color;
+				font-size: $hanger-size;
 				text-align: center;
+
+				transform: translateY(-50%);
 			}
 		}
 	}
 }
 
 .quantity {
-	border-top: 1px solid #dedede;
 	padding: 23px 0;
-	font-size: 12px;
+	border-top: 1px solid $border-color;
+
+	font-size: $quantity-font-size-mob;
 	&__text {
 		font-weight: 600;
 	}
 	&__count {
 		margin-top: 10px;
 		&-less {
-			display: inline-block;
 			position: relative;
-			&::before {
-				content: "";
-				position: absolute;
-				top: 50%;
-				transform: translate(-50%);
-				width: 9px;
-				height: 2px;
-				background-color: #000;
-			}
+
+			display: inline-block;
 			margin-right: 8px;
 			margin-bottom: 4px;
+
 			cursor: pointer;
+			&::before {
+				content: "";
+
+				position: absolute;
+				top: 50%;
+
+				width: 9px;
+				height: 2px;
+
+				background-color: $black;
+
+				transform: translate(-50%);
+			}
 		}
 		&-number {
-			border: 1px solid #dedede;
-			padding: 9px;
-			text-align: center;
-			color: #000;
-			font-family: 'OpenSans', sans-serif;
-			font-weight: 600;
 			display: inline-block;
 			width: 35px;
 			height: 35px;
+			padding: 9px;
+			border: 1px solid $border-color;
+
 			outline: none;
+
+			color: $primary-text-color;
+			font-family: $font-stack-OpenSans;
+			font-weight: 600;
+			text-align: center;
 		}
 		&-more {
+			position: relative;
+
 			display: inline-block;
+			margin-bottom: 4px;
 			margin-left: 8px;
+
+			cursor: pointer;
 			&::before {
-				position: absolute;
 				content: "";
+
+				position: absolute;
 				top: 50%;
-				transform: translate(-50%);
+
 				width: 9px;
 				height: 2px;
-				background-color: #000;
+
+				background-color: $black;
+
+				transform: translate(-50%);
 			}
-			position: relative;
-			margin-bottom: 4px;
-			cursor: pointer;
 			&::after {
 				content: "";
+
 				position: absolute;
-				width: 2px;
-				height: 10px;
 				top: -4px;
 				left: 50%;
+
+				width: 2px;
+				height: 10px;
+
+				background-color: $black;
+
 				transform: translateX(-50%);
-				background-color: #000;
 			}
 		}
 	}
 	&__left {
 		position: absolute;
 		top: -54px;
-		background-color: #eaeaea;
-		padding: 7px;
-		text-align: center;
-		font-size: 12px;
-		width: 90%;
 		left: 10%;
-		color: #000;
+
+		width: 90%;
+		padding: 7px;
+
+		background-color: $item-left-background-color;
+
+		color: $primary-text-color;
+		font-size: $quantity-left-font-size-mob;
+		text-align: center;
 		&-number {
 			margin-right: 5px;
 		}
 		&::after {
 			content: "";
+
 			position: absolute;
 			top: 100%;
 			left: 75%;
-			transform: translateX(-50%);
+
 			border: 11px solid transparent;
-			border-top: 11px solid #eaeaea;
+			border-top: 11px solid $item-left-background-color;
+
+			transform: translateX(-50%);
 		}
 	}
 }
 
 .like {
-	border: 1px solid #dedede;
 	display: inline-block;
-	padding: 18px;
-	font-size: 12px;
-	font-weight: 200;
 	margin-top: 14px;
 	margin-bottom: 14px;
-	vertical-align: bottom;
+	padding: 18px;
+	border: 1px solid $border-color;
+
+	font-weight: 200;
+	font-size: $like-font-size;
 	text-decoration: none;
+	vertical-align: bottom;
 	&:hover {
-		border-color: #000;
+		border-color: $black;
 	}
 	&.icon--heart {
 		position: relative;
 		&::before {
-			font-size: 13px;
-			color: #000;
 			position: absolute;
-			left: 50%;
 			top: 50%;
+			left: 50%;
+
+			color: $black;
+			font-size: $like-icon-size;
+
 			transform: translate(-50%, -50%);
 		}
 	}
 }
 
 .add-to-cart {
-	display: inline-block;
-	padding-left: 15px;
-	font-size: 13px;
-	font-weight: 200;
-	margin-top: 14px;
-	margin-left: 0;
-	background-color: #f68235;
-	vertical-align: bottom;
 	position: relative;
-	margin-bottom: 14px;
 	float: right;
+
+	display: inline-block;
+	margin-top: 14px;
+	margin-bottom: 14px;
+	margin-left: 0;
+	padding-left: 15px;
+
+	background-color: $add-to-cart-background-color;
+
+	font-weight: 200;
+	font-size: $add-to-cart-font-size;
 	text-decoration: none;
+	vertical-align: bottom;
 	&:hover {
-		background-color: #ef590e;
+		background-color: $dark-orange;
 	}
 	&:visited {
-		color: #000;
+		color: $black;
 	}
 	&__text {
-		text-transform: uppercase;
-		color: #fff;
-		background: url('../images/shop-bag-min.png') no-repeat;
-		background-position: 0 9px;
-		padding: 12px 25px;
-		display: inline-block;
 		@include respond-to(tablets) {
 			padding: 12px 15px;
 			padding-left: 20px;
 		}
+
+		display: inline-block;
+		padding: 12px 25px;
+
+		background: url('../images/shop-bag-min.png') no-repeat;
+		background-position: 0 9px;
+
+		color: $white;
+		text-transform: uppercase;
 	}
 }
 
 .shop-bag-img {
-	height: 19px;
 	width: 15px;
+	height: 19px;
 	margin-right: 12px;
 }
 
 .make-order {
-	border-top: 1px solid #dedede;
 	padding: 23px 0;
-	font-size: 12px;
+	border-top: 1px solid $border-color;
+
+	font-size: $make-order-font-size-mob;
 }
 
 .call {
@@ -363,27 +415,30 @@
 		position: relative;
 		&::before {
 			position: absolute;
-			font-size: 22px;
-			color: #7c7c7c;
-			left: 0;
 			top: 0;
+			left: 0;
+
+			color: $phone-color;
+			font-size: $phone-size;
 		}
 	}
 	&__text {
 		display: block;
-		color: #000;
-		padding-left: 30px;
-		font-family: 'HelveticaNeue', Arial, sans-serif;
 		margin-bottom: 10px;
+		padding-left: 30px;
+
+		color: $primary-text-color;
+		font-family: $font-stack-Helvetica;
 	}
 	&__number {
 		display: block;
-		color: #999;
-		padding-left: 30px;
 		margin-bottom: 10px;
-		font-family: 'HelveticaNeue', Arial, sans-serif;
+		padding-left: 30px;
+
+		color: $link-color;
+		font-family: $font-stack-Helvetica;
 		&:hover {
-			color: #000;
+			color: $primary-text-color;
 		}
 	}
 }
@@ -394,46 +449,52 @@
 		position: relative;
 		&::before {
 			position: absolute;
-			font-size: 22px;
-			color: #7c7c7c;
-			left: 0;
 			top: 50%;
+			left: 0;
+
+			color: $location-color;
+			font-size: $location-size;
+
 			transform: translateY(-50%);
 		}
 	}
 	&__text {
 		display: block;
-		color: #000;
-		padding-left: 30px;
-		font-family: 'HelveticaNeue', Arial, sans-serif;
 		margin-bottom: 10px;
+		padding-left: 30px;
+
+		color: $primary-text-color;
+		font-family: $font-stack-Helvetica;
 	}
 }
 
 .details {
-	border-top: 1px solid #dedede;
 	padding: 20px 0;
+	border-top: 1px solid $border-color;
 	&__title {
-		margin: 0;
-		font-weight: 300;
-		font-size: 18px;
-		margin-bottom: 18px;
 		position: relative;
+
+		margin: 0;
+		margin-bottom: 18px;
+
+		font-weight: 300;
+		font-size: $details-title-font-size-mob;
 		&:hover {
 			cursor: pointer;
 		}
 		&::before {
 			position: absolute;
-			right: 0;
 			top: 50%;
+			right: 0;
+
 			transform: translateY(-50%);
 		}
 		span {
-			font-family: 'HelveticaNeue', Arial, sans-serif;
+			font-family: $font-stack-Helvetica
 		}
 		&.icon--plus {
-			& ~ .details__item, 
-			& ~ .details__code, 
+			& ~ .details__item,
+			& ~ .details__code,
 			& ~ .details__info,
 			& ~ .details__text {
 				display: none;
@@ -441,11 +502,12 @@
 		}
 	}
 	&__item {
-		font-size: 12px;
+		font-size: $details-item-font-size-mob;
 		&-title {
-			font-weight: 600;
-			margin-right: 5px;
 			display: inline-block;
+			margin-right: 5px;
+
+			font-weight: 600;
 			vertical-align: top;
 		}
 		&-value {
@@ -454,24 +516,28 @@
 			margin: 0;
 		}
 		b {
-			font-weight: bold;
 			margin-right: 5px;
+
+			font-weight: bold;
 		}
 	}
 	&__code {
 		margin-top: 14px;
-		font-size: 12px;
+
+		font-size: $details-item-font-size-mob;
 		&-title {
-			font-weight: 600;
-			margin-right: 5px;
 			display: inline-block;
+			margin-right: 5px;
+
+			font-weight: 600;
 			vertical-align: top;
 		}
 		&-number {
-			color: #a7a7a7;
 			display: inline-block;
 			width: 70%;
 			margin: 0;
+
+			color: $item-code-color;
 		}
 	}
 	&__info {
@@ -479,13 +545,15 @@
 	}
 	&__text {
 		margin: 0;
-		font-size: 12px;
+
+		font-size: $details-item-font-size-mob;
 		b {
-			font-weight: bold;
 			display: inline-block;
 			margin-top: 20px;
+
+			font-weight: bold;
 			a {
-				color: #000;
+				color: $primary-text-color;
 			}
 		}
 		&-item {
