--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -16,3 +16,8 @@ $large: 1024px;
     @media only screen and (min-width: $large + 1) { @content; }
   }
 }
+
+@mixin image-fit {
+  width: 100%;
+  height: 100%;
+}
